tests/errors/compiler/coma_in_enum/coma_in_enum_class_1.c
enum class { a, } tmp;

int main() {
	return 0;
}
